--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "slavi122/upn-generator",
+  "name": "slavi122/upn-generator-bih",
   "description": "UPN form generator for BiH",
   "license": "MIT",
   "keywords": ["upn", "bih"],
